# Parallel-Programing-1stN-Prime-Numbers

./: CMakeLists.txt  README.md  hybrid.c  mpi.c  omp.c  sequ.c
